Creación de los metodos de las clases en un package